--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -25,7 +25,7 @@
 <div class="field">
   <%= f.label "Description" %>
   <br>
-  <%= f.text_area :description, required: true %>
+  <%= f.text_area :description%>
 </div><br>
 
 <div class="field bottomSpacer">
